# cpp-python-odes-binding

./: .gitignore  CMakeLists.txt
cpp/: CMakeLists.txt  interface.hpp  main.cpp  matrix.hpp  odes.cpp  systems.hpp
cpp/lib/: CMakeLists.txt  interface.cpp  interface.hpp  macros.hpp  matrix.cpp  matrix.hpp  odes.cpp  odes.hpp  storable.hpp  systems.cpp  systems.hpp  vector.cpp  vector.hpp
cpp/python_bindings/: CMakeLists.txt  odescppy.cpp
cpp/python_bindings/common/: macros.hpp  object_cache.cpp  object_cache.hpp  submodule_registration.cpp  submodule_registration.hpp
cpp/python_bindings/submodules/: matrix.cpp  matrix.hpp  object_interface.cpp  object_interface.hpp  solvers.cpp  solvers.hpp  systems.cpp  systems.hpp
cpp/test/: CMakeLists.txt  main.cpp  matrix_test.cpp  solvers_test.cpp  systems_test.cpp
python/: cpp_interface.py  main.py  main_boost.py
python/replication/: odes.py  systems.py
