cmake_minimum_required(VERSION 3.0.0)
project(CPPyODEs VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()

file(GLOB_RECURSE CPP_HEADERS ./*.hpp)
file(GLOB_RECURSE CPP_SOURCES ./*.cpp)

set(CMAKE_CXX_STANDARD 20)

add_library(CPPyODEs SHARED ${CPP_HEADERS} ${CPP_SOURCES})

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
