cmake_minimum_required(VERSION 3.0.0)
project(${LIB_PROJECT_NAME} VERSION 0.1.0 LANGUAGES C CXX)

file(GLOB_RECURSE CPP_HEADERS ./*.hpp)
file(GLOB_RECURSE CPP_SOURCES ./*.cpp)

add_library(${PROJECT_NAME} SHARED ${CPP_HEADERS} ${CPP_SOURCES})

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
