cmake_minimum_required(VERSION 3.0.0)
project(${LIB_PY_PROJECT_NAME} VERSION 0.1.0 LANGUAGES C CXX)

FIND_PACKAGE(Boost COMPONENTS python)
FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs REQUIRED)

file(GLOB_RECURSE CPP_HEADERS ./*.hpp)
file(GLOB_RECURSE CPP_SOURCES ./*.cpp)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
LINK_LIBRARIES(${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${LIB_PROJECT_NAME})

file(GLOB_RECURSE COMMON_CPP_SOURCES ./common/*.cpp)
file(GLOB_RECURSE SUBMODULE_CPP_SOURCES ./submodules/*.cpp)

PYTHON_ADD_MODULE(${LIB_PY_PROJECT_NAME} ${LIB_PY_PROJECT_NAME}.cpp ${COMMON_CPP_SOURCES} ${SUBMODULE_CPP_SOURCES})

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
